--- a/test.html
+++ b/test.html
@@ -9,26 +9,38 @@
 </head>
 
 <body>
-    <audio controls autoplay="true" id="aud">
-        <source src="http://127.0.0.1:5000/file/vinit" type="audio/mpeg">
-        Your browser does not support the audio element.
+    <audio controls id="aud" fileid="644478a0132bbf2fb8c23dd7">
+        <source src="http://127.0.0.1:5000/file/audio/644478a0132bbf2fb8c23dd7" type="audio/mpeg">
+        Your browser does not support the player element.
     </audio>
-    <audio controls autoplay="true" id="aud">
-        <source src="http://127.0.0.1:5000/file/test" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <video controls id="player" fileid="644476712766cc6586a3872e" width="300" height="300">
+        <source src="http://127.0.0.1:5000/file/video/644476712766cc6586a3872e" type="video/mp4">
+        Your browser does not support the player element.
+    </video>
+    <br>
+    <form action="http://127.0.0.1:5000/file/upload" method="post" enctype="multipart/form-data">
+        <input type="text" name="name" placeholder="name" required>
+        <input type="text" name="description" placeholder="description" required>
+        <input type="text" name="author" placeholder="author" required>
+        <select name="category" required>
+            <option value="audio">Audio</option>
+            <option value="video">Video</option>
+        </select>
+        <input type="file" name="file" required>
+        <Button type="submit">Upload</Button>
+    </form>
 </body>
 <script>
     var playing = false
-    var audio = document.getElementById("aud")
-    audio.onplaying = async () => {
+    var player = document.getElementById("player")
+    player.onplaying = async () => {
         playing = true
         while (playing) {
-            await sleep(2000)
-            console.log(audio.currentTime)
+            await sleep(1500)
             var body = {}
-            body.current = audio.currentTime
+            body.current = player.currentTime
             body.playing = playing
+            body.id = player.getAttribute("fileid")
             await fetch("http://127.0.0.1:5000/file/duration", {
                 method: "POST",
                 body: JSON.stringify(body),
@@ -38,7 +50,7 @@
             })
         }
     }
-    audio.onpause = () => {
+    player.onpause = () => {
         playing = false
     }
     function sleep(ms) {
