--- a/test.html
+++ b/test.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 
-<body>
-    <audio controls id="aud" fileid="644478a0132bbf2fb8c23dd7">
+<>
+    <audio controls id="aud" fileid="64454d8fc47f0bbbdbed2c33">
         <source src="http://127.0.0.1:5000/file/audio/644478a0132bbf2fb8c23dd7" type="audio/mpeg">
         Your browser does not support the player element.
     </audio>
@@ -17,6 +17,7 @@
         <source src="http://127.0.0.1:5000/file/video/644476712766cc6586a3872e" type="video/mp4">
         Your browser does not support the player element.
     </video>
+    <img src="http://127.0.0.1:5000/file/thumbnail/64454fc645f946b3ad2fb16c" alt="" width ="300" height="300">
     <br>
     <form action="http://127.0.0.1:5000/file/upload" method="post" enctype="multipart/form-data">
         <input type="text" name="name" placeholder="name" required>
@@ -27,6 +28,7 @@
             <option value="video">Video</option>
         </select>
         <input type="file" name="file" required>
+        <input type="file" name="thumbnail" required>
         <Button type="submit">Upload</Button>
     </form>
 </body>
@@ -40,7 +42,8 @@
             var body = {}
             body.current = player.currentTime
             body.playing = playing
-            body.id = player.getAttribute("fileid")
+            body.songid = player.getAttribute("fileid")
+            body.userid = "vinit"
             await fetch("http://127.0.0.1:5000/file/duration", {
                 method: "POST",
                 body: JSON.stringify(body),
