--- a/backend/test.html
+++ b/backend/test.html
@@ -12,7 +12,7 @@
     <source src="http://127.0.0.1:5000/file/audio/6446684327be1f8e8ce266e2" type="audio/mpeg">
     Your browser does not support the player element.
 </audio>
-<video controls id="player" fileid="6446684327be1f8e8ce266e2" width="300" height="300">
+<video  style="pointer-events: none;" id="player" fileid="6446684327be1f8e8ce266e2" width="300" height="300">
     <source src="http://127.0.0.1:5000/file/video/6446684327be1f8e8ce266e2" type="video/mp4">
     Your browser does not support the player element.
 </video>
